--- a/DB0201EN-PeerAssign-v5-by-DianaIlina.ipynb
+++ b/DB0201EN-PeerAssign-v5-by-DianaIlina.ipynb
@@ -168,7 +168,7 @@
     "# Remember the connection string is of the format:\n",
     "# %sql ibm_db_sa://my-username:my-password@my-hostname:my-port/my-db-name?security=SSL\n",
     "# Enter the connection string for your Db2 on Cloud database instance below\n",
-    "%sql ibm_db_sa://gnt62443:TRvEErWLyLScZigi@3883e7e4-18f5-4afe-be8c-fa31c41761d2.bs2io90l08kqb1od8lcg.databases.appdomain.cloud:31498/BLUDB?security=SSL"
+    "%sql ibm_db_sa:"
    ]
   },
   {
